--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -3,7 +3,7 @@
   height:100vh;
   margin: 0;
   padding: 0;
-
+  overflow: hidden;
   background: linear-gradient(rgba(255,255,255,.8), rgba(255,255,255,.4)), url("../../img/background.jpg") no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
